# bevy_sample_breakout

./: CLAUDE.md
docs_bevy_sample/: 20260711_bevy-breakout-setup-troubleshooting.md  20260711_bevy-wasm-react-integration.md  20260711_external-image-cors-and-formats.md  20260711_react-to-bevy-background-injection.md  20260711_react-to-bevy-init-params.md  20260711_wasm-bevy-browser-verification.md  20260711_wasm-build-size-optimization.md  20260711_why-wasm-is-secure.md  20260715_aspect-ratio-and-letterbox.md  20260715_brick-image-rendering.md  20260715_main-rs-module-split.md  20260716_background-rendering-and-bevy-system-params.md  20260716_bevy-resource-res-resmut-basics.md  20260717_bevy-add-systems-schedule-labels.md  20260717_bevy-to-frontend-event-notification.md  20260717_game-state-and-clear-notification-impl.md  20260717_wasm-dispatch-event-mechanism.md  20260723_ball-lifecycle.md  20260723_bevy-assets-handle-add-pattern.md  20260723_bevy-init-vs-restart-state.md  20260723_bevy-single-into-inner.md  20260723_check-for-collisions-system.md  20260723_deref-newtype-vs-dot-zero.md  20260723_rust-tuple-struct-and-dot-zero.md
docs_bevy_sample/.obsidian/: workspace.json
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: build-wasm.sh
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BevyGame.tsx
game_engine/: Cargo.toml
game_engine/.cargo/: config.toml
game_engine/assets/backgrounds/: README.md
game_engine/src/: components.rs  config.rs  injection.rs  main.rs  notify.rs  rendering.rs  setup.rs  systems.rs
